fixed mobile image stretching

--- a/src/App.css
+++ b/src/App.css
@@ -68,5 +68,5 @@
 }
 
 .home-image {
-  min-height: 40vh;
+  min-height: 30vh;
 }
